Ui Fixes and alignments

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,7 +151,7 @@ header { padding: 20px 40px; background: var(--main-bg-color);}
 
 .bannerWrapperContent { position: relative; z-index: 99;}
 
-.innerBannerWrapper,.bannerWrapperContent { display: flex; justify-content: center; flex-direction: column;}
+.innerBannerWrapper,.bannerWrapperContent, .verticalAlignCenter { display: flex; justify-content: center; flex-direction: column;}
 
 .homeBannerWrapper:before { position: absolute; z-index: 9; content: ''; width: 100%; height: 100%; left: 0; background: url(../images/circle.png) no-repeat -15% 100%; background-size: 30%; top: 150px;} 
 
@@ -213,9 +213,13 @@ section.bgLightGray { background: #eff3f8;}
 
 .testimonialsWrapper .item h4 { font-family: 'nowMedium'; font-size: 18px; color: var(--main-text-color); margin: 1.5rem 0;}
 
-.testimonialsWrapper .owl-carousel .owl-stage-outer { padding: 2rem 0;}
+.testimonialsWrapper .owl-carousel .owl-stage-outer { padding:150px 0 2rem 0;}
 
 .testimonialsWrapper .owl-item.active.center{transform: scale(1.2); }
+
+.testimonialsWrapper .owl-item p {display: none; font-size: 18px;}
+
+.testimonialsWrapper .owl-item.active.center p { font-size: 14px; color: #556179; display: block; position: absolute; top: -105px; height: 90px; left: -175px; min-width: 600px; max-width: 600px; text-align: center; font-family: 'nowRegular'; overflow: hidden;}
 
 .howItWorks { position: relative; padding-bottom: 5rem;}
 
@@ -235,13 +239,11 @@ section.bgLightGray { background: #eff3f8;}
 
 .howItWorks .quickLinks li a:hover { transform: scale(1.2);}
 
-.testimonialsWrapper .owl-nav span{ font-size: 5rem; ;}
-
-.testimonialsWrapper .owl-nav .owl-prev, .testimonialsWrapper .owl-nav .owl-next { background: url(../images/a);}
+.testimonialsWrapper .owl-nav span{ font-size: 3.8rem; ;}
 
 .testimonialsWrapper .owl-nav .owl-prev:hover , .testimonialsWrapper .owl-nav .owl-next:hover{ background: none; color: #999 !important;}
 
-.testimonialsWrapper .owl-prev, .testimonialsWrapper .owl-next { position: absolute; top: calc(50% - 90px); left:-100px; color: #999 !important; height: 60px;}
+.testimonialsWrapper .owl-prev, .testimonialsWrapper .owl-next { position: absolute; top: calc(50% - 25px); left:-100px; color: #999 !important; height: 60px;}
 
 .testimonialsWrapper .owl-next { left: inherit; right:-100px;}
 
@@ -336,7 +338,7 @@ footer ul.socialIcons li { display: inline-block; font-size: 30px; margin-right:
 
 .accountContentWrapper:before { position: absolute; content: ''; background: url(../images/fingerprint.svg) no-repeat 0 30%; background-size:40% ; opacity: 0.05; width: 100%; height: 100%;}
 
-.accountContentWrapper h4 { font-family: 'nowMedium'; font-size: 20px; margin: 1rem 0;}
+.accountContentWrapper h4 { font-family: 'nowBold'; font-size: 16px; margin: 1.5rem 0 1rem 0;}
 
 .accountContentWrapper p { font-family: 'nowRegular'; font-size: 14px;}
 
@@ -855,7 +857,7 @@ footer ul.socialIcons li { display: inline-block; font-size: 30px; margin-right:
 
  .faqSection .btn-link { font-size: 1.1rem;}
 
- .faqSection .card { margin-bottom: 1rem; border: 0px; box-shadow: 0 0 6px #aaa}
+ .faqSection .card { margin-bottom: 1rem; border: 0px; box-shadow: 0 0 3px #aaa}
 
  .faqSection .accordion>.card .card-header {  margin: 0;  padding: 8px; background: #fff; border-bottom:0px; ;}
 
@@ -863,4 +865,11 @@ footer ul.socialIcons li { display: inline-block; font-size: 30px; margin-right:
 
  .actionBtns a.btnSquare { border: 0.1rem solid var(--btn-bg-light-blue); color:var(--btn-bg-light-blue); background: #fff; margin-left: 2rem;}
 
+ .faqWrapper { background: url(../images/faq-bg.jpg) no-repeat 0 0; min-height: 500px; background-size: cover ;}
+
+ .faqWrapper .searchFilter { width: 50%; position: relative;}
+
+ .faqWrapper .searchFilter input.form-control { height: 55px; font-size: 18px; font-family: 'nowMedium';}
+
+ .faqWrapper .searchFilter:before { position: absolute; content: '\f002'; font-family: 'FontAwesome'; top: 10px; right: 15px; font-size:20px; color: #495057;}
 
